<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="logo">logo</string>
    <string name="next">NEXT</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="find_a_team_in_your_city_dominate_the_league">Find a team in your city, dominate the league</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="get_started">GET STARTED</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="desired_league">Desired League:</string>
    <string name="i_m_a">I\'m a</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>
