<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/beginnerballerbg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image" />

    <ImageView
            android:id="@+id/imageView6"
            android:layout_width="88dp"
            android:layout_height="29dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/swooshlogo"
            android:contentDescription="@string/logo" />

    <Button
            android:id="@+id/button"
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/swoosh_button"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
            android:text="@string/i_m_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            android:layout_marginTop="16dp" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/beginnerSkillBtn"
                android:layout_weight="1"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white"
                android:textOff="@string/beginner"
                android:fontFamily="@font/montserrat"
                android:layout_marginEnd="16dp"
                android:textOn="@string/beginner"
                android:onClick="onBeginnerClicked" />

        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ballerSkillBtn"
                android:layout_weight="1"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white"
                android:textOff="@string/baller"
                android:textOn="@string/baller"
                android:fontFamily="@font/montserrat"
                android:layout_marginStart="16dp"
                android:onClick="onBallerClicked" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>